libmpdclient 2.11 (not yet released)
* add space before "window" search argument

libmpdclient 2.10 (2015/02/23)
* support abstract sockets with "@" prefix
* support tag "MUSICBRAINZ_RELEASETRACKID"
* add TCP keepalive internal and external APIs
* support MPD protocol 0.19
  - status: support sample formats "float" and "dsd"
  - song: report duration with milliseconds precision
  - search: support constraint "modified-since"
* support MPD protocol 0.20
  - the "window" parameter for commands "find"/"search"

libmpdclient 2.9 (2013/10/29)
* directory: support attribute "Last-Modified"
* support MPD protocol 0.18
  - command "readcomments"
  - command "toggleoutput"
  - command "volume"
  - the "base" constraint for commands "find"/"search"

libmpdclient 2.8 (2013/04/09)
* song: support attribute "Prio"
* queue: fix the ranged "prio" command
* queue: support open ranges

libmpdclient 2.7 (2012/02/04)
* status: add nextsong/nextsongid support

libmpdclient 2.6 (2011/10/23)
* mpd/client.h: include message.h
* queue: support song priorities

libmpdclient 2.5 (2011/07/06)
* playlist: implement the command "listplaylists"
* idle: support event "sticker"
* support the client-to-client protocol (MPD 0.17)

libmpdclient 2.4 (2011/01/03)
* configure.ac, resolver: implement flag --disable-tcp
* resolver: fix IPv4/IPv6 on the loopback device
* player: support the command "clearerror"
* connection: add function mpd_connection_get_server_error_location()
* settings: expose connection settings
* iso8601, send: format string workarounds for WIN32
* Makefile.am: fix doxygen in out-of-tree build

libmpdclient 2.3 (2010/05/25)
* get default timeout from environment variable MPD_TIMEOUT
* fix assertion failures on malformed URI
* song: support attribute "Range"

libmpdclient 2.2 (2010/04/25)
* MixRamp support
* fix the LIBMPDCLIENT_CHECK_VERSION() macro

libmpdclient 2.1 (2009/12/06)
* status: added mpd_status_get_elapsed_ms()
* sticker: added sticker support